--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,23 @@
     transition: opacity 0.3s ease-in-out, bottom 0.3s ease-in-out, box-shadow 0.2s ease;
 }
 
+#info-text {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 15px;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: black;
+    border-radius: 4px;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    border: 2px solid rgb(53, 47, 108);
+    box-shadow: 3px 3px 0px rgb(23, 17, 77);
+    font-size: clamp(16px, 3vw, 20px);
+    text-align: center;
+    z-index: 200;
+}
+
 /* Sidebar Styles */
 .sidebar-toggle {
     position: fixed;
